chapter-01: Periodic commit.

--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -572,8 +572,53 @@ This is one of the immediate tasks of radiogeology.
 
 
 \Section % 11
+While this remains uncompleted, we must note, and take into account that the
+process of evolution of the biosphere, its transition into \emph{the
+noosphere}, clearly manifests an acceleration in the rate of geological
+processes.  The changes, which are presently manifesting themselves in the
+biosphere in the course of [the last] few \emph{thousand years} in connection
+with the growth of scientific thought and the social activity of mankind, have
+never existed in the history of the biosphere before.
 
-. . .
+Such, at the very least, are the conceptions which we can now derive from the
+study of the course of evolution of organisms during geological time.
+Decamyriads\footnoteRus{декамириада} are for geological time much less than a
+historical time's second.  Consequently, a thousand years on a geological scale
+would be more than 300 million years of geological time.  This does not
+contradict the great changes of the biosphere which took place, for example, in
+the Cambrian, when calcareous skeletal parts emerged in microscopic marine
+organisms, or [in] the Paleocene, when the fauna of mammals grew.\footnoteEd{
+	Numerous findings of small mammals are now known from the deposits of
+	different horizons of the Upper, and the top strata of the Lower
+	Cretaceous, and the most ancient remains of primitive mammals have been
+	observed already in Triassic deposits.  However, the intensive
+	evolutionary development of this class of vertebrates began after the
+	dying out of the dinosaurs in the Paleocene, by which the boundary
+	between the Cretaceous and the Paleogene in the history of the Earth is
+	determined to a large degree. [---Ed.]
+}  We must not fail to keep in mind that the time we are living through
+corresponds, geologically, to such a critical period, since the ice age has
+still not ended---the rate of change is, nevertheless, so slow that man could
+not notice it.
+
+Man and mankind, his kingdom in the biosphere lie completely in this period,
+and do not exceed its boundaries.
+
+A picture of the evolution of the biosphere since the Algonkian, and, more
+sharply, since the Cambrian during 500--800 million years.  The biosphere
+transitioned into a new evolutionary state\footnoteRus{эволюционное состояние}
+more than once.  New geological manifestations, which had never existed before,
+emerged.  This occurred, for example, in the Cambrian, when sizable organisms
+with calcium skeletons came into existence, and in the Tertiary (or, possibly,
+at the end of the Cretaceous), 15--80 million years ago, when our forests and
+steppes were coming into existence, and the life of sizable mammals developed.
+We have also been living through this presently, for the past 10--20 thousand
+years, when man, having developed scientific thought in a social environment,
+has been creating a new geological force in the biosphere, unprecedented in it.
+The biosphere has transitioned into, or, more precisely, is transitioning into
+\emph{a new evolutionary state---into the noosphere}--is being transformed by
+the scientific thought of social mankind.
+
 
 \Section % 12
 
