foreword-yanshin, chapter-01: Daily commit.

--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -408,3 +408,52 @@
   url =		{http://www.geology.19thcenturyscience.org/books/1863-Dana-ClassAnim/htm/doc.html},
   urldate =	{2012-08-07},
 }
+
+@mvbook { pasteur1922oeuvres,
+  author =	{Louis Pasteur},
+  booktitle =	{Oeuvres de Pasteur},
+  volume =	{1},
+  title =	{Dissymétrie moléculaire},
+  location =	{Paris},
+  publisher =	{Masson},
+  year =	{1922},
+  url =		{http://www.biodiversitylibrary.org/item/103132},
+  urldate =	{2012-08-10},
+  hyphenation = {french},
+  language =	{french},
+}
+
+@book { curie1908oeuvres,
+  author =	{Pierre Curie},
+  title =	{Oeuvres de Pierre Curie},
+  location =	{Paris},
+  publisher =	{Gauthier-Villars},
+  year =	{1908},
+}
+
+@book { poincare1902science,
+  author =	{Jules Henri Poincaré},
+  title =	{La Science et l'hypothèse},
+  location =	{Paris},
+  publisher =	{Flammarion},
+  series =	{Bibliothèque de philosophie scientifique},
+  year =	{1902},
+  url =		{http://echo.mpiwg-berlin.mpg.de/ECHOdocuViewfull?pn=5&url=/mpiwg/online/permanent/einstein_exhibition/sources/N9B38CEE/pageimg&viewMode=images&mode=imagepath},
+  urldate =	{2012-08-10},
+  hyphenation =	{french},
+  language =	{french},
+}
+
+@book { einstein1921geometrie,
+  author =	{Albert Einstein},
+  title =	{Geometrie und Erfahrung},
+  subtitle =	{Erweiterte Fassung des Festvortrages gehalten an der
+  	Preussischen Akademie der Wissenschaften zu Berlin am 27.~Januar 1921},
+  location =	{Berlin},
+  publisher =	{Julius Springer},
+  year =	{1921},
+  url =		{http://name.umdl.umich.edu/ABR1192.0001.001},
+  urldate =	{2012-08-10},
+  hyphenation =	{german},
+  language =	{german},
+}
