--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -426,7 +426,7 @@
 }
 
 @book { vernadsky1940biogeohimicheskie,
-  title = {Биогеохимические очерки},
+  title = {Биогеохимические очерки (1922--1932)},
   author = {Владимир Иванович Вернадский},
   lccn = {56048683},
   url = {http://books.google.com/books?id=37cIHAAACAAJ},
