--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -572,21 +572,25 @@ This is one of the immediate tasks of radiogeology.
 
 
 \Section % 11
+% The new evolutionary state of the biosphere, associated with the scientific
+% thought of social mankind.
 While this remains uncompleted, we must note, and take into account that the
 process of evolution of the biosphere, its transition into \emph{the
 noosphere}, clearly manifests an acceleration in the rate of geological
 processes.  The changes, which are presently manifesting themselves in the
-biosphere in the course of [the last] few \emph{thousand years} in connection
-with the growth of scientific thought and the social activity of mankind, have
-never existed in the history of the biosphere before.
+biosphere through the course of [the last] several \emph{thousand years} in
+connection with the growth of scientific thought and the social activity of
+mankind, have never existed in the history of the biosphere before.
 
 Such, at the very least, are the conceptions which we can now derive from the
 study of the course of evolution of organisms during geological time.
-Decamyriads\footnoteRus{декамириада} are for geological time much less than a
-historical time's second.  Consequently, a thousand years on a geological scale
-would be more than 300 million years of geological time.  This does not
-contradict the great changes of the biosphere which took place, for example, in
-the Cambrian, when calcareous skeletal parts emerged in microscopic marine
+Decamyriads\footnoteRus{декамириада} are much less than a historical time's
+second for geological time.  Consequently, a thousand years on a geological
+scale would be more than 300 million years of geological time.  This does not
+contradict [the existence of the periods of]\footnoteTransl{
+	Interpolated from implied meaning.
+} the great changes of the biosphere which took place, for example, in the
+Cambrian, when calcareous skeletal parts emerged in microscopic marine
 organisms, or [in] the Paleocene, when the fauna of mammals grew.\footnoteEd{
 	Numerous findings of small mammals are now known from the deposits of
 	different horizons of the Upper, and the top strata of the Lower
@@ -598,6 +602,8 @@ organisms, or [in] the Paleocene, when the fauna of mammals grew.\footnoteEd{
 	determined to a large degree. [---Ed.]
 }  We must not fail to keep in mind that the time we are living through
 corresponds, geologically, to such a critical period, since the ice age has
+% FIXME: Does Vernadsky mean an ice age cycle, rather than just an ice age by
+% `ледниковый период'?
 still not ended---the rate of change is, nevertheless, so slow that man could
 not notice it.
 
@@ -605,24 +611,98 @@ Man and mankind, his kingdom in the biosphere lie completely in this period,
 and do not exceed its boundaries.
 
 A picture of the evolution of the biosphere since the Algonkian, and, more
-sharply, since the Cambrian during 500--800 million years.  The biosphere
-transitioned into a new evolutionary state\footnoteRus{эволюционное состояние}
-more than once.  New geological manifestations, which had never existed before,
-emerged.  This occurred, for example, in the Cambrian, when sizable organisms
-with calcium skeletons came into existence, and in the Tertiary (or, possibly,
-at the end of the Cretaceous), 15--80 million years ago, when our forests and
-steppes were coming into existence, and the life of sizable mammals developed.
-We have also been living through this presently, for the past 10--20 thousand
-years, when man, having developed scientific thought in a social environment,
-has been creating a new geological force in the biosphere, unprecedented in it.
-The biosphere has transitioned into, or, more precisely, is transitioning into
-\emph{a new evolutionary state---into the noosphere}--is being transformed by
-the scientific thought of social mankind.
+sharply, since the Cambrian, over 500--800 million years can be given.  The
+biosphere transitioned into a new evolutionary state\footnoteRus{эволюционное
+состояние} more than once.  New geological manifestations, which had never
+existed before, emerged.  This occurred, for example, in the Cambrian, when
+large organisms with calcium skeletons came into existence, and in the Tertiary
+(or, possibly, at the end of the Cretaceous), 15--80 million years ago, when
+our forests and steppes were coming into existence, and the life of large
+mammals developed.  We have also been living through this presently, for the
+past 10--20 thousand years, when man, having developed scientific thought in a
+social environment, has been creating a new geological force in the biosphere,
+unprecedented in it.  The biosphere has transitioned into, or, more precisely,
+is transitioning into \emph{a new evolutionary state---into the noosphere}---is
+being transformed by the scientific thought of social mankind.
 
 
 \Section % 12
+The irreversibility of the evolutionary process is a manifestation of the
+characteristic distinction of living matter in the geological history of the
+planet from its inert naturally ocurring bodies and processes.  It can be seen
+that this irreversibility is connected to the special properites of the space
+occupied by the bodies of living organisms, to its special geometric structure,
+as P.~Curie would say, with its special \emph{state of
+space}.\footnoteRus{\emph{состоянием пространства}}  L.~Pasteur first
+understood the fundamental significance of this phenomenon, which he
+inadequately called dissimetry, in 1862.\footnote{
+	The principle was formulated by P.~Curie (1859--1906), but was
+	understood and expressed completely clearly and intuitively by
+	L.~Pasteur (1822--1895).  I have delimited it here as a special
+	principle (\cite{pasteur1922oeuvres, curie1908oeuvres}).
+}  He studied this phenomenon in another aspect, in the inequality between
+left and right phenomena in the organism, in the existence of left-handedness
+and right-handedness for it.\footnote{
+	It is striking that the phenomenon of `left-handedness' and
+	`right-handedness' remained outside of philosophical and mathematical
+	thought, even though individual great philosophers and mathematicians,
+	like Kant and Gauss, approached it.  Pasteur was a complete innovator
+	in thought, and it is extremely important that he arrived at this
+	phenomenon, and to the recognition of its significance proceeding from
+	experiment and observation.  Curie proceeded from Pasteur's ideas, but
+	developed them from a physical standpoint.  On the significance of
+	these ideas for life see \cite{vernadsky1940biogeohimicheskie} [A large
+	part of them was published in the book
+	\cite[22--271]{vernadsky1992trudy}]; \cite{vernadsky1934problemy1}
+	[\cite{vernadsky1980problemy}].
+}  Right-handedness and left-handedness can be manifested geometrically only in
+a space in which vectors are polar and enantiomorphic.  The lack of straight
+lines, and the strongly expressed curvature of the forms of life is,
+apparently, connected to this geometrical property.  I will return to this
+question further on, but I consider it necessary to note presently that we are,
+apparently, dealing with a space, not corresponding to Euclidean space, but to
+one of the forms of Riemannian space, inside organisms.
 
-. . .
+We are presently justified to admit the manifestation of the geometrical
+properties corresponding to all three forms of geometry---Euclidean,
+Lobachevskian and Riemannian---in the space in which we are living.  Further
+investigation will show whether such a conclusion, logically completely
+uncontradictable, is correct.\footnote{
+	Mathematical thought has admitted the equal permissibility of the
+	search for the manifestations of non-Euclidean geometry in the reality
+	surrounding us long ago.  Perhaps, the thought of this was clear to
+	Euclid himself when he separated the parallel postulate from his
+	axioms.  Lobachevsky (1793--1856) was striving to prove the existence
+	of the triangles introduced by him, proceeding from the rejection of
+	this postulate, for cosmic space.  It seems to me that H.~Poincaré
+	(\cite[3, 66]{poincare1902science}) most prominently emphasized the
+	possibility of searches for the manifestations of non-Euclidean
+	geometry in our physical environment.  This question raised no doubt
+	with the agitation of thought, occasioned by A.~Einstein
+	(\cite{einstein1921geometrie}).  It can be objected that in these cases
+	it was admitted, as it were, \lphr{tacito consensu} (by a tacit
+	agreement) that geometry, of this form or another, is the same in all
+	reality, while, as in the given case, we are dealing with a geometrical
+	heterogeneity of the space in our reality.  The space of life is
+	different from the space of inert matter.  I cannot see any basis for
+	presuming such an admission contradictory to the foundations of our
+	exact knowledge.
+}  Unfortunately, the great amount of empirical observations, relevant here and
+scientifically established, has not been assimilated in its significance by
+biologists, and has not entered into their scientific world outlook.
+Meanwhile, as P.~Curie showed, such a special state of space cannot occur in
+the usual space without special circumstances; a dissymetrical phenomenon,
+speaking his language, must always result from such a dyssimetrical cause.  The
+fundamental empirical generalization that living originates only from living,
+and an organism is born from an organism corresponds to this.  This is
+manifested geologically in the fact that we observe an impassable boundary
+between living and inert naturally occurring bodies and processes in the
+biosphere, which is not observable in any other terrestrial envelope.  There
+are two sharply materially [and] energetically distinct enviroments, mutually
+penetrating and changing their constituent atoms, connected with the biogenic
+flow of chemical elements, in it.  I will return to this phenomenon in more
+detail further on.
+
 
 \Section % 13
 
