--- a/tex/chapter-03.tex
+++ b/tex/chapter-03.tex
@@ -2,7 +2,7 @@
 The movement of scientific thought in the 20th century, and its significance in
 the geological history of the biosphere.  Its main characteristics: explosion
 of scientific work, change in the understanding of the fundamentals of reality,
-ecumenicism, and efficient, social manifestation of science.}
+ecumenicism, and efficient, social manifestation of science.}\label{ch:3}
 
 
 \Section \label{sec:47}
