--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -412,4 +412,16 @@ biogeochemistry as a main scientific area of the study of the biosphere, of the
 fundamental differences between the living and the inert matter of this evelope
 of the Earth is given.
 
+The work \rtitle{Scientific Thought as a Planetary Phenomenon} occupies a
+special place among the works of V.~I.\ Vernadsky.  It is distinguished by an
+unusual breadth of the range of questions considered in it, and by the specific
+character of the main problems examined.  The breadth of the views of their
+author about things, and the significance of the scale of posing questions have
+always been inherent to V.~I.\ Vernadsky's works.  However, these qualities of
+the scientist have been brought to a most prominent and powerful expression in
+the work being published.  Nature, human society, scientific thought are
+examined in their indissoluble unity, and the reality surrounding us is painted
+in a truly universal\footnoteRus{вселенской, \ie, also, `ecumenical' (see
+\autoref{ch:3}).} vastness.
+
 . . .
