--- a/tex/thought.tex
+++ b/tex/thought.tex
@@ -100,6 +100,7 @@
 \newcommand{\fncomma}{${\rule{-1pt}{0pt}}^{, }$}
 \DeclareNewFootnote{default} % Author's footnotes.
 \DeclareNewFootnote{Ed}[fnsymbol] % The editor's footnotes.
+%\MakePerPage{footnoteEd}
 \DeclareNewFootnote{Transl}[Roman] % Our (translator's) footnotes.
 \MakePerPage{footnoteTransl}
 
