foreword-yanshin, chapter-01: Daily commit.

--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -457,3 +457,11 @@
   hyphenation =	{german},
   language =	{german},
 }
+
+@book { yanshin1988evolyuciya,
+  author =	{Александр Леонидович Яншин},
+  title =	{Эволюция геологических процессов в истории Земли},
+  location =	{Ленинград},
+  publisher =	{Наука},
+  year =	{1988},
+}
