--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -131,7 +131,7 @@ life.
 % Living matter is in a state of organization, which is determining for the
 % biosphere.  Living matter's cosmic significance, and the constantly
 % increasing extent of the biosphere.
-Man, like every living natural (or naturally occurring)\footnoteRus{природное
+Man, like every living natural (or naturally-occurring)\footnoteRus{природное
 (или естественное)} body, is inseparably connected with a certain geological
 envelope of our planet---\emph{the biosphere}, clearly distinct from the rest
 of its envelopes, with a structure which is determined by its specific
@@ -283,7 +283,7 @@ which we will be dealing with in all of the following exposition.
 Such are the concepts connected with the concepts of natural body (natural
 object),\footnoteRus{природного тела (природного объекта)} and natural
 phenomenon.\footnoteRus{природного явления}  They have often been referred to
-as naturally occurring bodies or phenomena.\footnoteRus{естественные тела или
+as naturally-occurring bodies or phenomena.\footnoteRus{естественные тела или
 явления}
 
 Living matter is a natural body or phenomenon in the biosphere.  The concepts
@@ -627,22 +627,25 @@ being transformed by the scientific thought of social mankind.
 
 
 \Section % 12
+% The irreversibility of evolution, an expression of the Curie-Pesteur
+% discoveries principles of handedness and dissymmetry, and, actually, of
+% Vernadsky's polar and enantiomorphic state of space.
 The irreversibility of the evolutionary process is a manifestation of the
 characteristic distinction of living matter in the geological history of the
-planet from its inert naturally ocurring bodies and processes.  It can be seen
+planet from its inert naturally-occurring bodies and processes.  It can be seen
 that this irreversibility is connected to the special properites of the space
 occupied by the bodies of living organisms, to its special geometric structure,
-as P.~Curie would say, with its special \emph{state of
+as P.~Curie said, with its special \emph{state of
 space}.\footnoteRus{\emph{состоянием пространства}}  L.~Pasteur first
 understood the fundamental significance of this phenomenon, which he
-inadequately called dissimetry, in 1862.\footnote{
+inadequately called dissymmetry, in 1862.\footnote{
 	The principle was formulated by P.~Curie (1859--1906), but was
 	understood and expressed completely clearly and intuitively by
 	L.~Pasteur (1822--1895).  I have delimited it here as a special
 	principle (\cite{pasteur1922oeuvres, curie1908oeuvres}).
 }  He studied this phenomenon in another aspect, in the inequality between
 left and right phenomena in the organism, in the existence of left-handedness
-and right-handedness for it.\footnote{
+and right-handedness\footnoteRus{правизны и левизны} for it.\footnote{
 	It is striking that the phenomenon of `left-handedness' and
 	`right-handedness' remained outside of philosophical and mathematical
 	thought, even though individual great philosophers and mathematicians,
@@ -656,7 +659,7 @@ and right-handedness for it.\footnote{
 	\cite[22--271]{vernadsky1992trudy}]; \cite{vernadsky1934problemy1}
 	[\cite{vernadsky1980problemy}].
 }  Right-handedness and left-handedness can be manifested geometrically only in
-a space in which vectors are polar and enantiomorphic.  The lack of straight
+a space, in which vectors are polar and enantiomorphic.  The lack of straight
 lines, and the strongly expressed curvature of the forms of life is,
 apparently, connected to this geometrical property.  I will return to this
 question further on, but I consider it necessary to note presently that we are,
@@ -678,15 +681,15 @@ uncontradictable, is correct.\footnote{
 	(\cite[3, 66]{poincare1902science}) most prominently emphasized the
 	possibility of searches for the manifestations of non-Euclidean
 	geometry in our physical environment.  This question raised no doubt
-	with the agitation of thought, occasioned by A.~Einstein
-	(\cite{einstein1921geometrie}).  It can be objected that in these cases
-	it was admitted, as it were, \lphr{tacito consensu} (by a tacit
-	agreement) that geometry, of this form or another, is the same in all
-	reality, while, as in the given case, we are dealing with a geometrical
-	heterogeneity of the space in our reality.  The space of life is
-	different from the space of inert matter.  I cannot see any basis for
-	presuming such an admission contradictory to the foundations of our
-	exact knowledge.
+	with the ferment of thought,\footnoteRus{брожении мысли} occasioned by
+	A.~Einstein (\cite{einstein1921geometrie}).  It can be objected that in
+	these cases it was admitted, as it were, \lphr{tacito consensu} (by a
+	tacit agreement) that geometry, of this form or another, is the same in
+	all reality, while, as in the given case, we are dealing with a
+	geometrical heterogeneity of the space in our reality.  The space of
+	life is different from the space of inert matter.  I cannot see any
+	basis for presuming such an admission contradictory to the foundations
+	of our exact knowledge.
 }  Unfortunately, the great amount of empirical observations, relevant here and
 scientifically established, has not been assimilated in its significance by
 biologists, and has not entered into their scientific world outlook.
@@ -696,14 +699,89 @@ speaking his language, must always result from such a dyssimetrical cause.  The
 fundamental empirical generalization that living originates only from living,
 and an organism is born from an organism corresponds to this.  This is
 manifested geologically in the fact that we observe an impassable boundary
-between living and inert naturally occurring bodies and processes in the
+between living and inert naturally-occurring bodies and processes in the
 biosphere, which is not observable in any other terrestrial envelope.  There
-are two sharply materially [and] energetically distinct enviroments, mutually
-penetrating and changing their constituent atoms, connected with the biogenic
+are two sharply materially [and] energetically distinct media, mutually
+penetrating and exchanging their constituent atoms, connected with the biogenic
 flow of chemical elements, in it.  I will return to this phenomenon in more
 detail further on.
 
 
 \Section % 13
+% The current period of an extraordinary manifestation of living matter through
+% scientific thought.
+We are currently living through an extraordinary manifestation of living matter
+in the biosphere, genetically connected with the emergence of \lphr{Homo
+sapiens} thousands of years ago, the creation, in this way, of a new geological
+force, \emph{scientific thought,} dramatically increasing the influence of
+living matter on the evolution of the biosphere.  Completely encompassed by
+living matter, the biosphere is increasing the geological force of living
+matter to an, apparently, unlimited degree, and, being transformed by the
+scientific thought of \lphr{Homo sapiens,} is transitioning into one of its new
+states---\emph{into the noosphere.}
 
-. . .
+As a manifestation of living matter, scientific thought \emph{cannot be} in
+essence a reversible phenomenon---it can stop in the course of its motion, but,
+once created and manifested in the evolution of the biosphere, it carries in
+itself the ability of unlimited development in the course of time.  The course
+of scientific thought in this respect, for example in the creation of machines,
+is, as has been remarked long ago, completely analogous to the course of the
+reproduction of organisms.
+
+There is no irreversibility in the inert medium of the biosphere.  Reversible
+cyclical physico-chemical, and geochemical processes strongly predominate in
+it.  Living matter enters in them with its physico-chemical manifestations of
+dissonance.\footnoteEd{
+	The Earth as a whole has an irreversible development, as well, as is
+	shown by the work with radioactive determination of the age of the
+	rocks of the early Precambrian.  Biological evolution is strongly
+	distinguished by a different rate of development
+	(\cite{yanshin1988evolyuciya}).  [---Ed]
+}
+
+The growth of scientific thought, closely connected with the growth of man's
+population of the biosphere---his reproduction, and his cultures of living
+matter in the biosphere,---must be limited by the foreign living matter of the
+environment, and must exert a \emph{pressure} on it.  For this growth is
+connected to the quantity of rapidly increasing living matter, directly and
+indirectly participating in scientific work.
+
+This growth and the pressure connected to it is ever increasing, due to the
+fact that the activity of the mass of created machines, whose increase in the
+noosphere is subject to the same laws as those of the reproduction of living
+matter itself, \ie\ is expressed by a geometrical progression, is dramatically
+manifested in this work.
+
+As the reproduction of organisms is manifested in the \emph{pressure} of living
+matter in the biosphere, the course of the geological manifestation of
+scientific thought puts pressure, by the instruments created by it, on the
+inert medium of the biosphere containing it, creating the noosphere, the
+kingdom of reason.
+
+The history of scientific thought, of scientific knowledge, of its historical
+course is being manifested in a new aspect, which has not been sufficiently
+recognized to this day.  It must never be viewed as simply the history of one
+of the humanities.  This history is, at the same time, \emph{the history of the
+creation a new geological force---scientific thought,---in the biosphere,} not
+present in the biosphere before.  This is the history of manifestation of a new
+geological factor, of a new expression of the biosphere's state of
+ogranization, forming tempestuously, as a natural phenomenon during the last
+few tens of thousands of years.  It is not arbitrary, as every natural
+phenomenon, it is lawful, as the paleontological process, creating the brain of
+\lphr{Homo sapiens} and that social environment, in which scientific thought, a
+new geological, consciously directed, force is being created as a consequence
+of this environment, as a natural phenomenon connected with it, is lawful in
+the course of time.
+
+But the history of scientific knowledge, even as a history of one of the
+humanities, is still unrecognized and unwritten.  There is not a single attempt
+to do that.  It has just begun to exceed the limits of `biblical' time for us
+only in the recent years, the existence of \emph{a single center} of its
+emergence, somewhere in the region of the future Mediterranean culture eighty
+thousand years ago, has started to become clear.  We are beginning to detect,
+to establish unexpected for us, completely forgotten scientific facts lived
+through by mankind, only with great gaps from cultural remains, attempting to
+encompass them by new empirical generalizations.\footnote{
+	The rapid change in our knowledge thanks to archeological excavations
+	allows us to hope for very great changes in the near future.
+}
