--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -424,4 +424,11 @@ examined in their indissoluble unity, and the reality surrounding us is painted
 in a truly universal\footnoteRus{вселенской, \ie, also, `ecumenical' (see
 \autoref{ch:3}).} vastness.
 
+\rtitle{Scientific Thought as Planetary Phenomenon}---this is an apex of V.~I.\ 
+Vernadsky's work, a grandiose, in its intention, summary of his meditations on
+the destiny of scientific knowledge, on the relationship between science and
+philosophy, on the future of mankind.  It can be characterized as an
+impressive, though unfinished, synthesis of the ideas being developed by the
+scientist in the last period of his life.
+
 . . .
