Caring corrections from Liona.

--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -348,6 +348,7 @@
 
 @article { lukyanov1988neizvestny,
   journal = {Известия},
+  usera = {The Bulletin},
   title = {Неизвестный Вернадский},
   userb = {The Unknown Vernadsky},
   author = {Ф. Лукьянов},
