--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -8,7 +8,7 @@ distinction---material-energetic and temporal---of its living matter from its
 inert matter.  Evolution of the species, and evolution of the biosphere.  The
 manifestation of a new geological force in the biosphere---the scientific
 thought of social mankind.  Its manifestation is related to the ice age, in
-which we live, with one of the geological phenomena repeating in the history of
+which we live, to one of the geological phenomena repeating in the history of
 the planet, whose cause exceeds the bounds of the Earth's crust.}
 
 
@@ -30,7 +30,7 @@ environment of their life and thought.
 
 Philosophy cannot sufficiently take this into account, as it proceeds from the
 laws of the mind, which is, in one way or another, a final and self-sufficient
-criterium for it (even in those cases, like in religious and mystical
+criterion for it (even in those cases, like religious and mystical
 philosophies, in which the reach of the mind is, in fact, limited).
 
 The contemporary scientist, proceeding from the recognition of the reality of
@@ -45,11 +45,12 @@ cosmos, or world reality,\footnote{
 	natural science and in literature.  The concept `cosmos' can be,
 	perhaps, more conveniently applied to only the part of reality
 	encompassed by science, a philosophically pluralistic conception of
-	reality is possible at that, where there would be no single criterium
+	reality is possible at that, where there would be no single criterion
 	for the cosmos.
 }---cannot adopt this point of view as a basis for scientific work.
 
-Because one presently knows exactly that man is \emph{not} located on a
+[Thus,]\footnoteTransl{Interpolated for meaning in English.} because one
+presently knows with scientific precision that man is \emph{not} located on a
 structureless surface of the Earth, is \emph{not} located in direct contact
 with cosmic space in a structureless nature, which is not lawfully connected
 with him.  True, even the deeply penetrating contemporary naturalist often, out
@@ -67,8 +68,8 @@ physical process.  That is possible only in thought.
 The concept of life and the living is clear to us in everyday life, and cannot
 raise scientifically serious doubts in the actual manifestations of it, and in
 natural objects corresponding to it---in natural bodies.  It was only in the
-$20^{\mathrm{th}}$ century [with the discovery of] filter-passing viruses that
-in science appeared facts, compelling us for the first time to ask
+$20^{\mathrm{th}}$ century, [with the discovery of] filter-passing viruses,
+that there appeared facts in science compelling us for the first time to ask
 seriously---not philosophically, but scientifically---the question: Are we
 dealing with a living natural body, or with a non-living natural body---an
 inert one?
@@ -81,10 +82,10 @@ would give, with this approach couldn't fail to give \dots
 
 Along with this, however, we encounter another kind of doubts in
 \emph{science}, called for by philosophical and religious searches.  Thus, for
-example, phenomena, concerning the material-energetic environment of
-manifestations which are philosophically \emph{common} to both living and inert
-natural bodies, are scientifically studied in the works of the Bose Institute
-in Calcutta.\footnoteRus{Института Бозе в Калькутте}\footnoteEd{
+example, phenomena concerning the material-energetic environment of
+manifestations, which are philosophically \emph{common} to both living and
+inert natural bodies, are scientifically studied in the works of the Bose
+Institute in Calcutta.\footnoteRus{Института Бозе в Калькутте}\footnoteEd{
 	The Bose
 	Institute\footnoteTransl{\url{http://www.boseinst.ernet.in/index.html}}
 	in Calcutta was founded by the Indian scientist Acharya Jagadish
