--- a/tex/foreword-mingaleev.tex
+++ b/tex/foreword-mingaleev.tex
@@ -45,7 +45,7 @@ Planetary Phenomenon}, or (which would be just terrific ;-) for aid with its
 proofreading, contact me at the address indicated on the
 \url{http://vernadsky.lib.ru} server.
 
-*Note:* The electronic edition is being prepared in the LaTeX format; it is
+*Note:* The electronic edition is being prepared in the \LaTeX format; it is
 necessary to update that version, and not the derived HTML version in the Maxim
 Moshkov library when proofreading.
 
