More corrections from Liona.

--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -74,18 +74,19 @@ seriously---not philosophically, but scientifically---the question: Are we
 dealing with a living natural body, or with a non-living natural body---an
 inert one?
 
-With viruses the doubt is called for by scientific observations, rather than
+With viruses the doubt is cast by scientific observations, rather than
 philosophical notions.  In this consists the great scientific significance of
 their study.  That is presently on a right and firm path.  The doubt will be
 resolved, and nothing, except a more precise notion of \emph{living organism},
-would give, with this approach couldn't fail to give \dots
+would give, with this approach couldn't fail to give
+\dots\footnoteEd{Incomplete sentence in the original.}
 
-Along with this, however, we encounter another kind of doubts in
-\emph{science}, called for by philosophical and religious searches.  Thus, for
-example, phenomena concerning the material-energetic environment of
-manifestations, which are philosophically \emph{common} to both living and
-inert natural bodies, are scientifically studied in the works of the Bose
-Institute in Calcutta.\footnoteRus{Института Бозе в Калькутте}\footnoteEd{
+Along with this, however, we encounter another kind of doubt in \emph{science},
+arising from philosophical and religious searches.  For example, phenomena
+concerning the material-energetic environment of manifestations, which are
+philosophically \emph{common} to both living and inert natural bodies, are
+scientifically studied in the works of the Bose Institute in
+Calcutta.\footnoteRus{Института Бозе в Калькутте}\footnoteEd{
 	The Bose
 	Institute\footnoteTransl{\url{http://www.boseinst.ernet.in/index.html}}
 	in Calcutta was founded by the Indian scientist Acharya Jagadish
@@ -93,11 +94,11 @@ Institute in Calcutta.\footnoteRus{Института Бозе в Калькут
 	The institute studied the problems of physics, biophysics, inorganic
 	and organic chemistry, biochemistry, the physiology of plants,
 	selection, microbiology, etc. [---Ed.]
-} They are not characteristic of, are weakly expressed in inert natural bodies,
-and are strongly manifested in living ones, but are common to both.
+} They are not characteristic of, but are weakly expressed in inert natural
+bodies, are strongly manifested in living ones, but are common to both.
 
 This area, if it exists in the form in which Bose tried to establish it, of
-phenomena common to inert and living natural bodies introduces nothing new in
+phenomena common to inert and living natural bodies, introduces nothing new in
 the sharp distinction between them.  The distinction must manifest itself in
 this area, as well, if only the latter's existence would be proven.
 
